[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/gameplay/SpawnEvents.gd" type="Script" id=1]

[node name="SpawnEvents" type="Node" index="0"]
script = ExtResource( 1 )

[node name="FoodTimer" type="Timer" parent="." index="0"]
process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="PlasticTimer" type="Timer" parent="." index="1"]
process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[connection signal="timeout" from="FoodTimer" to="." method="_on_FoodTimer_timeout"]
[connection signal="timeout" from="PlasticTimer" to="." method="_on_PlasticTimer_timeout"]
